# fortran-datetime

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FortranDatetimeConfig.cmake
src/: datetime.F90  datetime_mod.F90  datetime_test.F90  timedelta_mod.F90  timedelta_test.F90
